--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Florian \"Voltyk\" Malfroid",
+  "author": "Florian 'Voltyk' Malfroid",
   "license": "ISC",
   "dependencies": {
-    "data-store": "^4.0.3",
     "discord.js": "^14.14.1",
-    "dotenv": "^16.4.5"
+    "dotenv": "^16.4.5",
+    "node-json-db": "^2.3.0"
   },
   "imports": {
     "#commands/*": "./commands/*"
