--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "discord.js": "^14.14.1",
     "dotenv": "^16.4.5",
+    "express": "^4.21.2",
     "jimp": "^0.22.12",
     "node-json-db": "^2.3.0"
   },
